--- a/SSM/SSM整合/整合笔记.md
+++ b/SSM/SSM整合/整合笔记.md
@@ -16,15 +16,141 @@ SprinMVC:将之前的Servlet进行升级,让流程更简单进行的一个解决
 
 首先这是我集成后的目录结构:
 
-![image-20210910092548867](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210910092548867.png)
+![image-20210915174645007](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210915174645007.png)
 
-### 1.1 导包
+### 1.1 maven依赖
 
-做任何事之前我们得需要导包!导包之后在做配置
+由于我这里使用的maven结构,所以我这里就把指定的maven依赖整理一下
 
-![image-20210910092812222](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210910092812222.png)
+```xml-dtd
+<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+    <jackson.version>2.5.4</jackson.version>
+  </properties>
 
-以上就是集成所需要的包!
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+    <!--mvc-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>4.3.13.RELEASE</version>
+    </dependency>
+    <!--spring-context-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>4.3.13.RELEASE</version>
+    </dependency>
+    <!--spring控制模块 -->
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-aspects -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aspects</artifactId>
+      <version>4.3.13.RELEASE</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>4.3.13.RELEASE</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>4.3.13.RELEASE</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- mybatis -->
+    <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.4.5</version>
+    </dependency>
+    <!-- mybatis整合spring的适配包 -->
+    <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core -->
+    <dependency>
+      <groupId>org.mybatis.generator</groupId>
+      <artifactId>mybatis-generator-core</artifactId>
+      <version>1.3.5</version>
+    </dependency>
+    <!-- 数据库连接池 -->
+    <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>1.1.10</version>
+    </dependency>
+
+    <!-- 数据库驱动 -->
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.22</version>
+    </dependency>
+    <!-- jstl -->
+    <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <!-- servlet api -->
+    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.28</version>
+    </dependency>
+    <!--lombok插件-->
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.16</version>
+      </dependency>
+    <!-- file upload part -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3</version>
+    </dependency>
+    <!--jackson-->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+  </dependencies>
+```
+
+以上就是我搭建SSM所依赖的包
 
 ### 1.2 Spring MVC的配置文件
 
@@ -41,12 +167,10 @@ SprinMVC:将之前的Servlet进行升级,让流程更简单进行的一个解决
         http://www.springframework.org/schema/context
         http://www.springframework.org/schema/context/spring-context.xsd
         ">
-
-    <!--1.静态资源放心,让静态资源可以不拦截-->
-    <mvc:default-servlet-handler/>
+    <!--1.让静态资源放行,让静态资源可以不拦截-->
     <!--2.扫描Controller-->
-    <context:component-scan base-package="learn.controller"/>
-    <!--3.让requestMapping 生效-->
+    <context:component-scan base-package="org.learn.controller"/>
+    <!--3.让requestMapping生效-->
     <mvc:annotation-driven/>
     <!--4.视图解析器-->
     <bean class="org.springframework.web.servlet.view.InternalResourceViewResolver">
@@ -54,8 +178,9 @@ SprinMVC:将之前的Servlet进行升级,让流程更简单进行的一个解决
         <property name="suffix" value=".jsp"/>
     </bean>
     <!--5.文件上传解析器-->
-    <bean id="multipartFile" class="org.springframework.web.multipart.commons.CommonsMultipartResolver">
-        <property name="maxUploadSize" value="536870912"/>
+    <bean class="org.springframework.web.multipart.commons.CommonsMultipartResolver">
+        <property name="maxUploadSize" value="104857600"/>
+        <property name="maxInMemorySize" value="4096" />
     </bean>
     <!--6.拦截器-->
     <!--    <mvc:interceptors>-->
@@ -80,46 +205,42 @@ SprinMVC:将之前的Servlet进行升级,让流程更简单进行的一个解决
 ```xml-dtd
 <?xml version="1.0" encoding="UTF-8"?>
 <beans xmlns="http://www.springframework.org/schema/beans"
-       xmlns:mvc="http://www.springframework.org/schema/mvc"
-       xmlns:context="http://www.springframework.org/schema/context"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-       xsi:schemaLocation="http://www.springframework.org/schema/beans
-        http://www.springframework.org/schema/beans/spring-beans.xsd
-        http://www.springframework.org/schema/mvc
-        http://www.springframework.org/schema/mvc/spring-mvc.xsd
-        http://www.springframework.org/schema/context
-        http://www.springframework.org/schema/context/spring-context.xsd
-        ">
+       xmlns:context="http://www.springframework.org/schema/context"
+       xsi:schemaLocation="
+       http://www.springframework.org/schema/beans
+       http://www.springframework.org/schema/beans/spring-beans.xsd
+       http://www.springframework.org/schema/context
+       http://www.springframework.org/schema/context/spring-context.xsd">
     <!--spring整合mybatis-->
-    <!--1,读取连接数据库的地址-->
+    <!--1.读取数据库地址-->
     <context:property-placeholder location="classpath:db.properties"/>
-    <!--2.配置连接池:-->
-    <bean id="dsource" class="org.apache.commons.dbcp.BasicDataSource">
+    <!--2.配置连接池-阿里连接池-->
+    <bean id="dataSource" class="com.alibaba.druid.pool.DruidDataSource">
         <property name="driverClassName" value="${jdbc.driverClassName}"/>
         <property name="url" value="${jdbc.url}"/>
         <property name="username" value="${jdbc.username}"/>
         <property name="password" value="${jdbc.password}"/>
-    </bean>
+     </bean>
     <!--3.配置SqlSessionFactoryBean 进行整合mybatis-->
     <bean id="sqlSessionFactory" class="org.mybatis.spring.SqlSessionFactoryBean">
         <!--3.1注入连接池-->
-        <property name="dataSource" ref="dsource"/>
-        <!--3.2 注入:找到对应的mapper.xml加入到映射文件中-->
-        <property name="mapperLocations" value="classpath:learn/mapper/*Mapper.xml"/>
-        <!--3.3注入:将指定包下的类进行批量别名 首字母小写-->
-        <property name="typeAliasesPackage" value="learn.domain"/>
+        <property name="dataSource" ref="dataSource"/>
+        <!--3.2注入:找到对应的mapper.xml加入到映射文件中-->
+        <property name="mapperLocations" value="classpath:mapper/*Mapper.xml"/>
+        <!--3.3注入:将指定包下的类进行批量别名,首字母小写-->
+        <property name="typeAliasesPackage" value="org.learn.domain"/>
     </bean>
-    <!--4.扫描mapper接口: spring就会创建mapper接口的对象-->
+    <!--4.扫描mapper接口:spring就会创建mapper接口的对象-->
     <bean class="org.mybatis.spring.mapper.MapperScannerConfigurer">
-        <!--注入sqlSessionFactory 默认注入所以不写-->
-        <property name="basePackage" value="learn.mapper"/>
+        <property name="basePackage" value="org.learn.mapper"/>
     </bean>
-    <!--5.service交给Spring管理, service注册到 spring-->
-    <context:component-scan base-package="learn.service"/>
+    <!--5.service交给spring管理,service注册到spring-->
+    <context:component-scan base-package="org.learn.service"/>
 </beans>
 ```
 
-这里Spring的话就要集成myabtis的配置,
+这里Spring除了扫描注解以外还集成mybatis的配置文件
 
 ### 1.4 web.xml
 
@@ -130,51 +251,125 @@ SprinMVC:将之前的Servlet进行升级,让流程更简单进行的一个解决
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          id="WebApp_ID" version="3.1">
+  <!--1.前端控制器:核心控制器-->
+  <servlet>
+    <servlet-name>dispatcherServlet</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <!--找到指定的spring mvc配置文件-->
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath:spring-mvc.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <!--拦截所有请求进入前端控制器-->
+    <servlet-name>dispatcherServlet</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
 
-    <!--1.前端控制器:核心控制器-->
-    <servlet>
-        <servlet-name>dispatcherServlet</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <init-param>
-            <!--找到指定的spring MVC配置文件-->
-            <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:dispatcher-Servlet.xml</param-value>
-        </init-param>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <!--拦截所有请求-->
-        <servlet-name>dispatcherServlet</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
+  <!--2.过滤器-->
+  <filter>
+    <!--这里过滤每次post请求造成乱码的问题-->
+    <filter-name>CharacterEncodingFilter</filter-name>
+    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>utf-8</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>CharacterEncodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
-    <!--2.过滤器 解决post请求乱码问题-->
-    <filter>
-        <filter-name>CharacterEncodingFilter</filter-name>
-        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-        <init-param>
-            <param-name>encoding</param-name>
-            <param-value>utf-8</param-value>
-        </init-param>
-    </filter>
-    <filter-mapping>
-        <filter-name>CharacterEncodingFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-
-    <!--3.通过spring实现的web监听器,启动spring容器,也就是当tomcat启动的同时那么也就会启动spring容器-->
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:applicationContext.xml</param-value>
-    </context-param>
+  <!--3.通过spring实现的web监听器,启动Spring容器.也就是当tomcat启动的时候也会启动spring容器-->
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:applicationContext.xml</param-value>
+  </context-param>
 </web-app>
 ```
 
  web.xml中主要是配置了springMVC和Spring的配置文件,让其在启动或者访问的时候都进行了加载,这样子就可以了!
 
-### 1.5 小结
+### 1.5 其他配置
+
+这是数据库配置文件:
+
+```xml-dtd
+#驱动程序类的完全限定名
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver   // 这里之所以要加jdbc前缀是因为如果直接加的话在spring框架中已经存在这种关键字,所以加了就会造成冲突问题 
+#数据库链接地址
+jdbc.url=jdbc:mysql://127.0.0.1:3306/testhome?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
+#用户名
+jdbc.username=root
+#密码
+jdbc.password=root
+```
+
+这是日志配置文件:
+
+```xml-dtd
+#5.控制台输出+自定义布局
+log4j.rootLogger=DEBUG,my
+#指定输出器
+log4j.appender.my=org.apache.log4j.ConsoleAppender
+#指定布局器(自定义布局)
+#指定布局为自定义布局
+log4j.appender.my.layout=org.apache.log4j.PatternLayout
+#指定在自定义布局的格式，%d -- 表示当前系统时间，%t -- 执行该业务的线程名称，%p -- 日记器的级别，-5 -- 5表示输出字符的个数，符号表示右对齐
+#%c -- 表示指定业务所在的类的完全限定名(包名.类名)，%m -- 输出额外信息，%n -- 表示换行
+log4j.appender.my.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
+#设置package（可以是自定义的包也可以是api的包）输出级别
+log4j.logger.org.springframework=info
+log4j.logger.org.learn=debug
+```
+
+### 1.6 小结
 
 关于集成的话我认为就是一堆配置文件配置就可以了,之前是针对每一个框架进行配置,而现在则是配置在一起进行分工合作!而配置好以后就可以不用那么麻烦的去写配置进行开发!
+
+### 1.7 踩坑记录
+
+1. 在导入数据库驱动依赖的时候,要注意依赖的版本与数据库的版本要保持一致,并且导入数据库驱动名称的时候是"**com.mysql.cj.jdbc.Driver**"
+
+2. 我在学习JS的时候使用Ajax发起请求,由于是两个服务器之间的交互使用浏览器导致浏览器会因为不同的服务器拦截造成跨域问题,这里记录一下解决方案:
+
+   - 我使用返回请求头的方式:
+
+     ```java
+     resp.setHeader("Access-Control-Allow-Origin","*"); // 指定允许其他域名访问
+     ```
+
+     但是依然会报:
+
+     ![img](https://gitee.com/miawei/pic-go-img/raw/master/imgs/kuangstudy9539011a-ff7d-48e7-a1cd-a0ae72efe5c6.jpg)
+
+     结论:这是不可取的,还是没解决这类问题;
+
+   - 我采用注解的方式:
+
+     ```java
+     import org.springframework.web.bind.annotation.CrossOrigin;
+     @CrossOrigin //在接口或者类上都可以
+     ```
+
+     就可以完美解决:
+
+     ![image-20210915181407513](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210915181407513.png)
+
+     但是这里要注意一个问题:就是这里注解的依赖版本应该是有要求的:
+
+     ```xml-dtd
+     	<dependency>
+           <groupId>org.springframework</groupId>
+           <artifactId>spring-webmvc</artifactId>
+           <version>4.3.13.RELEASE</version>
+         </dependency>
+     ```
+
+     要求是4.3以后的版本,之前的好像还不得行!
