--- a/SSM/SSM整合/整合笔记.md
+++ b/SSM/SSM整合/整合笔记.md
@@ -147,6 +147,12 @@ SprinMVC:将之前的Servlet进行升级,让流程更简单进行的一个解决
       <artifactId>jackson-databind</artifactId>
       <version>${jackson.version}</version>
     </dependency>
+<!-- log4j-->
+	 <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
   </dependencies>
 ```
 
@@ -168,6 +174,7 @@ SprinMVC:将之前的Servlet进行升级,让流程更简单进行的一个解决
         http://www.springframework.org/schema/context/spring-context.xsd
         ">
     <!--1.让静态资源放行,让静态资源可以不拦截-->
+	<mvc:default-servlet-handler/>
     <!--2.扫描Controller-->
     <context:component-scan base-package="org.learn.controller"/>
     <!--3.让requestMapping生效-->
