自动装配原理

--- a/spring Boot/笔记.md
+++ b/spring Boot/笔记.md
@@ -211,5 +211,317 @@ cmd运行:
 
 **理解**:在构建项目的时候,我们会勾选上web这个模块,然后在项目初始化的时候spring-boot就会将比如dispatcherServlet,servlet,都会导入到项目依赖中
 
+> spring Boot会将所有的功能场景,都变成一个个的启动器,我们要使用什么功能就只需要找到对应的启动器就可以了`starter`
+
 ### 3.2 主启动类
+
+```java
+@SpringBootApplication  //来标注一个主程序类->说明这是一个Spring Boot应用
+public class SpringbootProjectApplication {
+    public static void main(String[] args) {
+        //将springboot应用启动,这里以为是启动了一个方法没想到是启动了一个服务!
+        SpringApplication.run(SpringbootProjectApplication.class, args);
+    }
+}
+```
+
+我们接下来就来分析一下这个主程序都干了些东西!
+
+1. #### @SpringBootApplication
+
+   作用:标注在某个类上说明这个类是springBoot的主配置类,Spring Boot就应该运行这个类的main方法来启动SpringBoot应用;
+
+   进入这个注解可以发现上面还有很多注解:
+
+   ```java
+   @SpringBootConfiguration
+   @EnableAutoConfiguration
+   @ComponentScan(
+       excludeFilters = {@Filter(
+       type = FilterType.CUSTOM,
+       classes = {TypeExcludeFilter.class}
+   ), @Filter(
+       type = FilterType.CUSTOM,
+       classes = {AutoConfigurationExcludeFilter.class}
+   )}
+   )
+   public @interface SpringBootApplication {
+       // ......
+   }
+   ```
+
+2. #### @ComponentScan
+
+   这个注解在spring很重要,它对应XML配置中的元素
+
+   作用:自动扫描并加载符合条件的组件或者bean,将这个bean定义加载到IOC容器中
+
+3. #### @SpringBootConfiguration
+
+   作用:SpringBoot的配置类,标注在某个类上,表示这是一个SpringBoot的配置类
+
+   我们在点进去再看看:
+
+   ```java
+   //点击这个注解进入下面那个@Component
+   @Configuration
+   public @interface SpringBootConfiguration {...}
+   
+   @Component
+   public @interface Configuration {...}
+   ```
+
+   这里的@Configuration说明这是一个配置类,配置类就是对应的Spring的xml配置文件;而再点进去得到的@Component这就说明该启动类本身也就是Spring中的一个组件而已,负责启动应用!
+
+   ------
+
+   我们再回到@SpringBootApplication注解中再看:
+
+4. #### @EnableAutoConfiguration
+
+   **开启自动配置功能**
+
+   以前我们需要自己配置的东西,而现在SpringBoot可以自动帮我们配置;
+
+   而@EbableAutoConfiguration告诉springBoot开启自动配置功能,这样自动配置才能生效;
+
+   点击注解继续查看:
+
+5. #### @AutoConfigurationPackage
+
+   **自动配置包**
+
+   ```java
+   @Import(AutoConfigurationPackages.Registrar.class)
+   public @interface AutoConfigurationPackage {...}
+   ```
+
+6. #### @Import
+
+   这是Spring底层注解,给容器中导入一个组件;
+
+   Registrar.class作用:将主启动类的所在包下面所有子包里面的所有组件扫描到Spring容器中;(所以为什么说要跟主程序同一个包才可以)
+
+   ------
+
+   回到上一步:
+
+7. #### @Import(AutoConfigurationImportSelector.class)
+
+   **给容器导入组件**
+
+   AutoConfigurationImportSelector:自动配置导入选择器,那么它会导入哪些组件的选择器呢?我们再点击这个源码查看:
+
+   - 首先看下这里:
+
+     ```java
+     @Override
+     	public String[] selectImports(AnnotationMetadata annotationMetadata) {
+     		if (!isEnabled(annotationMetadata)) {
+     			return NO_IMPORTS;
+     		}
+     		AutoConfigurationEntry autoConfigurationEntry = getAutoConfigurationEntry(annotationMetadata);
+     		return StringUtils.toStringArray(autoConfigurationEntry.getConfigurations());
+     	}
+     ```
+
+     表示加载元数据,表示把pom.xml文件中的数据加载进来,加载完后就进入下一步:
+
+   - 获得自动配置实体:
+
+     ```java
+     protected AutoConfigurationEntry getAutoConfigurationEntry(AnnotationMetadata annotationMetadata) {
+     		if (!isEnabled(annotationMetadata)) {
+     			return EMPTY_ENTRY;
+     		}
+     		AnnotationAttributes attributes = getAttributes(annotationMetadata);
+     		List<String> configurations = getCandidateConfigurations(annotationMetadata, attributes);
+     		configurations = removeDuplicates(configurations);
+     		Set<String> exclusions = getExclusions(annotationMetadata, attributes);
+     		checkExcludedClasses(configurations, exclusions);
+     		configurations.removeAll(exclusions);
+     		configurations = getConfigurationClassFilter().filter(configurations);
+     		fireAutoConfigurationImportEvents(configurations, exclusions);
+     		return new AutoConfigurationEntry(configurations, exclusions);
+     	}
+     ```
+
+   - 然后点击其中的getCandidateConfigurations来获取候选的配置:
+
+     ```java
+     //获得所有的配置
+     protected List<String> getCandidateConfigurations(AnnotationMetadata metadata, AnnotationAttributes attributes) {
+         	//这里getSpringFactoriesLoaderFactoryClass()返回的是我们最开始看的启动自动导入配置文件的注解类,是:@EnableAutoConfiguration
+     		List<String> configurations = SpringFactoriesLoader.SpringFactoriesLoader(getSpringFactoriesLoaderFactoryClass(),
+     		//getBeanClassLoader这是一个加载器,相当于当前类的                                                                                  
+     				getBeanClassLoader());
+         	//这里提个彩蛋:这里断言可以如果发现不再就会给出提示说 META-INF/spring.factories这个文件找不到.那么这个有什么用呢?
+     		Assert.notEmpty(configurations, "No auto configuration classes found in META-INF/spring.factories. If you "
+     				+ "are using a custom packaging, make sure that file is correct.");
+     		return configurations;
+     }
+     //然后获取了哪些配置呢?就是这里
+     //这里是getSpringFactoriesLoaderFactoryClass返回的是注解类:  意思是加载类,加载启动类2下的所有资源被导入
+     protected Class<?> getSpringFactoriesLoaderFactoryClass() {
+     		return EnableAutoConfiguration.class;
+     }
+     ```
+
+   - 我们在点击`SpringFactoriesLoader`的静态方法`SpringFactoriesLoader`的源码查看:
+
+     ```java
+     //这是加载spring.factories这个自动配置文件的,而这里factorType表示加载了一个类这个类就是我们标注了@SpringBootApplication的这个类
+     public static List<String> loadFactoryNames(Class<?> factoryType, @Nullable ClassLoader classLoader) {
+     		ClassLoader classLoaderToUse = classLoader;
+     		if (classLoaderToUse == null) {
+     			classLoaderToUse = SpringFactoriesLoader.class.getClassLoader();
+     		}
+         //获取类的名字
+     		String factoryTypeName = factoryType.getName();
+         //这里它又调用loadSpringFactories方法,获取默认的包名,为空则返回空的集合
+     		return loadSpringFactories(classLoaderToUse).getOrDefault(factoryTypeName, Collections.emptyList());
+     	}
+     ```
+
+   - 我们继续查看loadSpringFactories源码里看:
+
+     ```java
+     private static Map<String, List<String>> loadSpringFactories(ClassLoader classLoader) {
+         //这里先去缓存里去加载
+     		Map<String, List<String>> result = cache.get(classLoader);
+     		if (result != null) {
+     			return result;
+     		}
+     
+     		result = new HashMap<>();
+     		try {
+                 //去获取一个资源 "META-INF/spring.factories",这里通过class类加载器去获取资源,将里面所有自动配置类加载进来
+     			Enumeration<URL> urls = classLoader.getResources(FACTORIES_RESOURCE_LOCATION);
+                 //将获取的资源进行遍历,封装成为一个Properties
+                 //判断有没有更多的元素,也即是从资源配置下找存在是否可以自动配置的东西,遍历完成之后封装为Properties供我们使用!
+     			while (urls.hasMoreElements()) {
+                     //如果有的话就放在url里面
+     				URL url = urls.nextElement();
+     				UrlResource resource = new UrlResource(url);
+                     //把url这些资源加载到properties配置类里面,供我们使用
+     				Properties properties = PropertiesLoaderUtils.loadProperties(resource);
+     				for (Map.Entry<?, ?> entry : properties.entrySet()) {
+     					String factoryTypeName = ((String) entry.getKey()).trim();
+     					String[] factoryImplementationNames =
+     							StringUtils.commaDelimitedListToStringArray((String) entry.getValue());
+     					for (String factoryImplementationName : factoryImplementationNames) {
+     						result.computeIfAbsent(factoryTypeName, key -> new ArrayList<>())
+     								.add(factoryImplementationName.trim());
+     					}
+     				}
+     			}
+     
+     			// Replace all lists with unmodifiable lists containing unique elements
+     			result.replaceAll((factoryType, implementations) -> implementations.stream().distinct()
+     					.collect(Collectors.collectingAndThen(Collectors.toList(), Collections::unmodifiableList)));
+                 //放入到缓存里面
+     			cache.put(classLoader, result);
+     		}
+     		catch (IOException ex) {
+     			throw new IllegalArgumentException("Unable to load factories from location [" +
+     					FACTORIES_RESOURCE_LOCATION + "]", ex);
+     		}
+     		return result;
+     	}
+     ```
+
+   - 这里可以发现有个关键词:`FACTORIES_RESOURCE_LOCATION`这是常量对应的是:"META-INF/spring.factories",全局搜索:	
+
+
+8. ## spring.factories(自动配置的核心文件)
+
+   ![image-20210918114949624](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210918114949624.png)
+   
+   根据源头我们找到了spring.factories然后将其打开,可以发现有很多的配置的文件,**这就是自动配置的根源之所在**!
+   
+   我们往下翻找到`Auto Configure(自动配置)`下的`WebMvcAutoConfiguration`这个类,打开看看:
+   
+9. #### WebMvcAutoConfiguration
+
+   <img src="https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210918150043307.png" alt="image-20210918150043307" style="zoom: 80%;" />
+
+   ​		
+
+   @Configuration:表示这是Java的一个配置类
+
+   @ConditionalOnClass:这是spring注解表示通过一些条件来判断是否注入
+   
+   我们继续在当前类里往下翻:
+   
+   ![image-20210918210321016](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210918210321016.png)
+   
+   这个不难发现就是springMVC中的视图解析器,这个都已经自动配置了,还有一些过滤器啊什么的都是已经自动配置好了 	
+   
+   其中可以发现:这些一个个的都是Java Config配置类,而且都注入了一些Bean!
+   
+   **结论**:自动配置真正实现是从classPath中搜寻所有的`META-INF/spring.factories`配置文件,并将其中对应的`org.springframework.boot.autoconfigure.`包下的配置项,通过反射实例化为对应标注了`@Configuration`的JavaConfig形式的IOC容器配置类,然后将这些都汇总成为一个实例并加载到IOC容器中。
+   
+   
+   
+   -> 但是思考一个问题:既然是加载spring.factories里的所有的自动配置文件,那么为什么只生效了部分呢?
+   
+   比如我们随便点击一个没导入包的类进入:
+   
+   ![image-20210918230144508](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210918230144508.png)
+
+可以发现`@ConditionalOnClass`这个就是一个判断条件,判断条件成立才会加载这个类!比如说这里必须这个jar包存在那么这个类才会生效!
+
+### 3.3 画图解析
+
+![自动装配原理分析](https://gitee.com/miawei/pic-go-img/raw/master/imgs/%E8%87%AA%E5%8A%A8%E8%A3%85%E9%85%8D%E5%8E%9F%E7%90%86%E5%88%86%E6%9E%90.png)
+
+
+
+ ### 3.3 总结
+
+结论:springBoot所有的自动配置都是在启动的时候扫描并加载:`spring.factories`所有的自动配置类都在这里面,但是不一定生效,要判断条件是否成立,只要导入了对应的start,就有对应的启动器了,有了启动器,我们自动装配就会生效,然后配置成功!
+
+步骤:
+
+1. SpringBoot在启动的时候会从类路径下的`META-INF/spring.factories`中获取指定的值(就是一个个的URL然后遍历封装到Properties);
+2. 将这些值作为自动配置类的导入容器(这个容器就是在具体的配置类中的`@Configuration`和方法上的`@Bean`),自动配置类就生效,帮我们进行自动配置工作
+3. 整个J2EE的整体解决方案和自动配置都在(xxxAutoConfiguration),就是给容器中导入这个场景需要的所有组件,并配置好这些组件
+4. 解决方案和自动配置都在`spring-boot-autoconfigure-2.5.4.jar`这个包下
+5. 它会把所有需要导入的组件,以类名(配置文件中都是全限定类名)的形式返回,这些组件就会被添加到容器
+6. 容器中也会存在非常多的xxxAutoConfiguration的文件,就是这些类给容器中导入了这个场景需要的所有组件(`@Bean`),并自动配置@Configuration
+7. 有了自动配置类,免去了我们手动编写配置注入功能组件等的工作!
+
+
+
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
