表哥 我又来了哦

--- a/spring Boot/笔记.md
+++ b/spring Boot/笔记.md
@@ -252,19 +252,35 @@ public class SpringbootProjectApplication {
 
 2. #### @ComponentScan
 
-   这个注解在spring很重要,它对应XML配置中的元素
+   这个注解在spring很重要,它对应XML配置中的元素,也就是扫描我们默认的包下的注解比如@Controller然后加载到我们IOC容器中!
 
-   作用:自动扫描并加载符合条件的组件或者bean,将这个bean定义加载到IOC容器中
+   作用:自动扫描并加载符合条件的组件或者bean,将这个bean定义加载到IOC容器中,默认扫描当前类下的package
 
 3. #### @SpringBootConfiguration
 
-   作用:SpringBoot的配置类,标注在某个类上,表示这是一个SpringBoot的配置类
+   作用:SpringBoot的配置类,标注在某个类上,表示这是一个SpringBoot的配置类,它表示就是支持JavaConfig形式的IOC容器的配置类
+
+   ```java
+   这个javaConfig形式的配置类就是跟我们平常使用的xml配置文件也是一样的,只不过两者配置方式不一样!给你们来个经典案例:
+   javaconfig:
+   @Configuration
+   public class MockConfiguration{
+       @Bean
+       public MockService mockService(){
+           return new MockServiceImpl(dependencyService());
+       }
+   }
+   xml:
+   <bean id="mockService" class="..MockServiceImpl">
+      <propery name ="dependencyService" ref="dependencyService" />
+   </bean>
+   ```
 
    我们在点进去再看看:
 
    ```java
    //点击这个注解进入下面那个@Component
-   @Configuration
+   @Configuration  //说百了就是支持JavaConfig的方式进行配置
    public @interface SpringBootConfiguration {...}
    
    @Component
@@ -302,6 +318,22 @@ public class SpringbootProjectApplication {
 
    Registrar.class作用:将主启动类的所在包下面所有子包里面的所有组件扫描到Spring容器中;(所以为什么说要跟主程序同一个包才可以)
 
+   我们在点击进去查看:
+
+   ```java
+   @Override
+   public void registerBeanDefinitions(AnnotationMetadata metadata,
+           BeanDefinitionRegistry registry) {
+       register(registry, new PackageImport(metadata).getPackageName());
+   }
+   ```
+
+   表示在默认的情况下就是将:主配置类(@SpringBootApplication)的所在包及其子包里面的部件扫描到Spring容器中!
+
+   思考:这里也是扫描包加载到spring容器那么我们之前使用@ComponentScan的功能不就是重复了吗?
+
+   > 比如说,我们使用Spring Data JPA,可能会在实体类上写@Entity注解,而这个注解是由@AutoConfigurationPackage扫描并加载,而我们平时开发用的@Controller/@Service...这些注解是由CompoentScan来扫描并加载的; 简单理解就是:两者扫描的对象都是不一致的!
+
    ------
 
    回到上一步:
@@ -316,6 +348,7 @@ public class SpringbootProjectApplication {
 
      ```java
      @Override
+     //所有需要导入的组件以全类名的方式返回；这些组件就会被添加到容器中
      	public String[] selectImports(AnnotationMetadata annotationMetadata) {
      		if (!isEnabled(annotationMetadata)) {
      			return NO_IMPORTS;
@@ -324,11 +357,11 @@ public class SpringbootProjectApplication {
      		return StringUtils.toStringArray(autoConfigurationEntry.getConfigurations());
      	}
      ```
-
+   
      表示加载元数据,表示把pom.xml文件中的数据加载进来,加载完后就进入下一步:
-
+   
    - 获得自动配置实体:
-
+   
      ```java
      protected AutoConfigurationEntry getAutoConfigurationEntry(AnnotationMetadata annotationMetadata) {
      		if (!isEnabled(annotationMetadata)) {
@@ -345,9 +378,9 @@ public class SpringbootProjectApplication {
      		return new AutoConfigurationEntry(configurations, exclusions);
      	}
      ```
-
+   
    - 然后点击其中的getCandidateConfigurations来获取候选的配置:
-
+   
      ```java
      //获得所有的配置
      protected List<String> getCandidateConfigurations(AnnotationMetadata metadata, AnnotationAttributes attributes) {
@@ -366,9 +399,9 @@ public class SpringbootProjectApplication {
      		return EnableAutoConfiguration.class;
      }
      ```
-
+   
    - 我们在点击`SpringFactoriesLoader`的静态方法`SpringFactoriesLoader`的源码查看:
-
+   
      ```java
      //这是加载spring.factories这个自动配置文件的,而这里factorType表示加载了一个类这个类就是我们标注了@SpringBootApplication的这个类
      public static List<String> loadFactoryNames(Class<?> factoryType, @Nullable ClassLoader classLoader) {
@@ -382,9 +415,9 @@ public class SpringbootProjectApplication {
      		return loadSpringFactories(classLoaderToUse).getOrDefault(factoryTypeName, Collections.emptyList());
      	}
      ```
-
+   
    - 我们继续查看loadSpringFactories源码里看:
-
+   
      ```java
      private static Map<String, List<String>> loadSpringFactories(ClassLoader classLoader) {
          //这里先去缓存里去加载
@@ -429,7 +462,7 @@ public class SpringbootProjectApplication {
      		return result;
      	}
      ```
-
+   
    - 这里可以发现有个关键词:`FACTORIES_RESOURCE_LOCATION`这是常量对应的是:"META-INF/spring.factories",全局搜索:	
 
 
@@ -490,6 +523,171 @@ public class SpringbootProjectApplication {
 5. 它会把所有需要导入的组件,以类名(配置文件中都是全限定类名)的形式返回,这些组件就会被添加到容器
 6. 容器中也会存在非常多的xxxAutoConfiguration的文件,就是这些类给容器中导入了这个场景需要的所有组件(`@Bean`),并自动配置@Configuration
 7. 有了自动配置类,免去了我们手动编写配置注入功能组件等的工作!
+
+## 4.启动类
+
+我们来看一下启动类是如何运行的:
+
+```java
+public static void main(String[] args) {
+        TimeInterval timer = DateUtil.timer();
+        //将springboot应用启动
+        SpringApplication.run(SpringbootProjectApplication.class, args);
+        //启动日志
+        Console.log("〓〓〓系统启动成功,耗时{}〓〓〓，当前时间是{}", timer.intervalPretty(), DateUtil.now());
+    }
+```
+
+最初的时候以为就是运行个main方法,没想到这里就是直接运行了一个服务!
+
+SpringApplication调用一个静态方法run,该方法里有个参数,一个是当前类,一个是当前命令行参数
+
+SpringApplication这个类主要做了以下四件事情:
+
+1. 推断应用的类型是普通的java项目还是web项目
+2. 查找并加载所有可用初始化器 ， 设置到initializers属性中
+3. 找出所有的应用程序监听器，设置到listeners属性中
+4. 推断并设置main方法的定义类，找到运行的主类
+
+查看构造器:
+
+```java
+
+public SpringApplication(ResourceLoader resourceLoader, Class... primarySources) {
+    // ......
+    this.webApplicationType = WebApplicationType.deduceFromClasspath();
+    this.setInitializers(this.getSpringFactoriesInstances();
+    this.setListeners(this.getSpringFactoriesInstances(ApplicationListener.class));
+    this.mainApplicationClass = this.deduceMainApplicationClass();
+}
+```
+
+run方法流程分析:
+
+![img](https://mmbiz.qpic.cn/mmbiz_png/uJDAUKrGC7L1vFQMnaRIJSmeZ58T2eZicjafiawQLp9u8wc4ic1Mjy6OyfibzfjVofeL5pnS1NSFKVjlIg6neI9ySg/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+
+   跟着源码一起看效果会更好哦!
+
+## 5.配置文件
+
+在springBoot使用一个全局的配置文件,我们在创建springBoot的时候就会初始化一个文件`application.properties`这个文件,不过这个文件官方并不推荐,推荐的是另一种文件`yaml`格式的!
+
+- application.properties
+  - 语法结构:`key=value`
+- application.yaml
+  - 语法结构: `key:空格value`
+
+**注意**:配置文件的名称是固定的!
+
+因为springBoot底层就已经以这个名称写好了,说白了就是大家一起约定一下写一样的名字;
+
+**解释**:
+
+在pom.xml中的`spring-boot-starter-parent`中已经标注了:
+
+```xml-dtd
+<resource>
+        <directory>${basedir}/src/main/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>**/application*.yml</include>
+          <include>**/application*.yaml</include>
+          <include>**/application*.properties</include>
+        </includes>
+</resource>
+```
+
+表示获取resource下的配置文件,并且这里还存在优先级问题,也就是如果同时存在的话!
+
+**配置文件的作用**:修改SpringBoot自动配置的默认值,因为SpringBoot在底层都给我们自动配置好了
+
+### 5.1 yaml概述
+
+**概述**:YAML是 "YAML Ain't a Markup Language" （YAML不是一种标记语言）的递归缩写。在开发的这种语言时，YAML 的意思其实是："Yet Another Markup Language"（仍是一种标记语言）
+
+> 这种语言以数据为中心,而不是以标记语言为重点!
+
+以前的配置文件,大多数都是使用xml来配置;比如一个简单的端口配置,我们来对比下yaml和xml:
+
+传统的xml配置:
+
+```xml
+<servr>
+	<port>8081</port>
+</servr>
+```
+
+yaml配置:
+
+```yaml
+server:
+	port: 8081
+```
+
+### 5.2 语法
+
+1. ### 字面量:普通的值[数字,布尔值,字符串]
+
+   ```yaml
+   k: v
+   ```
+
+    字面量直接写在后面就可以,字符串默认不用加上双引号或者单引号
+
+   **注意**:
+
+   1. ""双引号,不会转义字符串里面的特殊字符,特殊字符会作为本身想表示的意思
+      - 比如:name: "你好 \n 吗",然后输出:你好 换行 吗
+   2. ''单引号,会转义特殊字符,特殊字符最终会变成和普通字符一样输出
+      - 比如:name: '你好 \n 吗',然后输出:你好 \n 吗
+
+2. ### 对象、Map(键值对)
+
+   ```yaml
+   # 对象、Map格式
+   k：
+   	v1: xx
+   	v2: xx
+   ```
+
+   我们一般使用换行的形式来表达键值对的属性和值的关系,但是要注意缩进关系!比如:
+
+   ```yaml
+   student:
+   	name: Miao
+   	age: 3
+   ```
+
+   行内写法:
+
+   ```yaml
+   student: {name: Miao,age: 3}
+   ```
+
+3. ### 数组(List、set)
+
+   用 - 值表示数组中的一个元素,比如:
+
+   ```yaml
+   zoo:
+   	- cat
+   	- dog
+   	- pig
+   ```
+
+   行内写法:
+
+   ```yaml
+   zoo: [cat,dog,pig]
+   ```
+
+**注意事项**:
+
+在yaml语法中对于空格是有着比较严格的要求!
+
+1. 空格不能省略;
+2. 以缩进来控制层级关系,只要左边对齐的一列数据都是同一个层级的
+3. 属性和值的大小写都是十分敏感的;
 
 
 
