--- a/spring Boot/笔记.md
+++ b/spring Boot/笔记.md
@@ -689,37 +689,396 @@ server:
 2. 以缩进来控制层级关系,只要左边对齐的一列数据都是同一个层级的
 3. 属性和值的大小写都是十分敏感的;
 
+### 5.3 注入
 
+以前我们使用注入的时候使用的是Spring的@Value注解,它可以指定参数在Spring容器加载通过反射进行实例设值!但是这样耦合度很高,毕竟直接写在字段上,比如:
+
+```java
+public class Dog {
+    @Value("缪威")
+    private String name;
+    @Value("21")
+    private Integer age;
+}
+```
+
+而yaml文件更强大的地方在于，他可以给我们的实体类直接注入匹配值！
+
+1. 新建一个Dog:
+
+   ```java
+   @Component
+   @Data
+   public class Dog {
+        private String name;
+       private Integer age;
+   }
+   ```
+
+2. 新建一个Pseron:
+
+   ```java
+   @Component
+   @Data
+   @ConfigurationProperties(prefix = "person")
+   public class Person {
+       private String name;
+       private Integer age;
+       private Boolean happy;
+       private Date birth;
+       private Map<String, Object> maps;
+       private List<String> lists;
+       private Dog dog;
+   }
+   ```
+
+3. 在yaml配置文件进行配置
+
+   ```yaml
+   # 使用yaml配置注入的方式进行注入
+   person:
+     name: MiaoWei
+     age: 21
+     happy: false
+     birth: 2000/08/14
+     # map 键值对形式
+     maps: {k1: v1,k2: v2}
+     #list集合数组的形式
+     lists:
+       - code
+       - 父母
+       - music
+     # 对象的形式
+     dog:
+       name: 缪威
+       age: 21
+   ```
+
+4. 测试
+
+   ```java
+   @SpringBootTest
+   class SpringbootProjectApplicationTests {
+       @Autowired
+       private Person person;
+       @Test
+       void contextLoads() {
+           System.out.println(person);
+       }
+   }
+   ```
+
+5. 结果:
+
+   ![image-20210920150833380](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210920150833380.png)
+
+   可以发现是自动注入进去了!
+
+**注意**:
+
+1. *@ConfigurationProperties*作用:
+
+   - 将配置文件中配置的每一个属性的值,映射到这个组件中;告诉springBoot将本类中的所有属性和配置文件进行绑定,参数`prefix="person"`:则是将配置文件中的person下面的属性一一对应
+
+2. 导入以上注解就会报出一个红色的提示:
+
+   ![image-20210920151225909](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210920151225909.png)
+
+   解决办法:
+
+   ```xml-dtd
+   <!-- 导入配置文件处理器，配置文件进行绑定就会有提示，需要重启 -->
+   <dependency>
+     <groupId>org.springframework.boot</groupId>
+     <artifactId>spring-boot-configuration-processor</artifactId>
+     <optional>true</optional>
+   </dependency>
+   ```
+
+配置文件还可以使用站位符生成随机数:
+
+```yaml
+name: miaowei${random.uuid} # 随机uuid
+```
+
+
+
+------
+
+以上加载yaml的配置文件,如果要加载properties文件,也是可以的:
+
+1. 在`application.properties`里写注入值:
+
+   ```properties
+   name=缪威
+   ```
+
+2. 然后在我们的代码中指定加载`application.properties`文件
+
+   ```java
+   @Component
+   @Data
+   @PropertySource(value = "classpath:application.properties")
+   public class Dog {
+       @Value("${name}")  //这里使用SQEL表达式
+       private String name;
+       private Integer age;
+   }
+   ```
+
+3. 测试:
+
+   ```java
+   @SpringBootTest
+   class SpringbootProjectApplicationTests {
+       @Autowired
+       private Dog dog;
+       @Test
+       void contextLoads() {
+           System.out.println(dog);
+       }
+   }
+   ```
+
+4. 运行:
+
+   ![image-20210920153010506](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210920153010506.png)
+
+发现是可以注入成功的
+
+
+
+**小结**:
+
+@Value这个使用起来并不友好！我们需要为每个属性单独注解赋值，比较麻烦；我们来看个功能对比图:
+
+![image-20210920153428362](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210920153428362.png)
+
+1. @ConfigurationProperties只需要写一次即可,@Value则需要每个字段都添加
+2. 松散绑定:比如我yml中写的`last-name`,这个和`lastName`是一样的,`-` 后面跟着的字母默认是大写的,这就是松散绑定!测试是可以正常注入的!
+3. JSR303数据校验:这个就是我们可以在字段是增加一层过滤器验证,可以保证数据的合法性
+4. 复杂类型封装:yml中可以封装对象,使用value就不支持
+
+**结论**:
+
+- 我们使用yml和配置properties都可以获取到值,强烈推荐yml
+
+- 我们在业务中需要获取到配置文件中的某个值,就可以使用一下@Value
+- 如果说我们专门编写一个JavaBean来和配置文件一一对应那么就直接选择@configurationProperties!
+
+代码:
+
+1. 使用@Value来获取指定配置文件中的某个值(这个配置文件可以是yaml也可以是properties)
+
+   ```java
+   @Component
+   @Data
+   @PropertySource(value = "classpath:application.yaml")
+   public class Person {
+       @Value("${student.name}")
+       private String name;
+   }
+   //针对单个字段进行获取配置文件中的值
+   ```
+
+2. 使用@configurationProperties则是将指定节点中的节点一一对应映射
+
+   ```java
+   @Component
+   @Data
+   @ConfigurationProperties(prefix = "student")
+   public class Person {
+       private String lastName;
+       private Integer age;
+       private Boolean happy;
+       private Date birth;
+       private Map<String, Object> maps;
+       private List<String> lists;
+       private Dog dog;
+   }
+   //只要字段跟配置文件中的字段保持一致那么就会映射获取
+   ```
 
    
 
+### 5.4 加载位置
+
+外部加载配置文件的方式十分多,我们选择最常用的即可:
+
+![图片](https://mmbiz.qpic.cn/mmbiz_png/uJDAUKrGC7IPEXZtUAUBhnSZvUmrPzbDUoiazZ6ehegLG4doZK0uSJHribIqwVKiaNibSaYZSgjZf4kGzhLdGrkzzw/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+
+这是springBoot的官方文档里描述配置文件的加载位置,扫描这些位置的application.properties或者application.yml文件作为springBoot的默认配置文件
+
+**注意**:如果同时存在`application.properties`和`application.yml`那么前者的优先级高!
+
+解释一下图中位置的描述:
+
+```
+优先级1:项目路径下的config文件夹配置文件
+优先级2:项目路径下的配置文件
+优先级3:资源路径下的config文件夹配置文件
+优先级4:资源路径下配置文件
+```
+
+> 优先级从高到低,高优先级的配置会覆盖低优先级的配置;
+
+SpringBoot会从这四个位置全部加载主配置文件;**进行互补配置**
+
+测试:我在低配置的yml里添加参数,然后运行测试看是否能注入到:
+
+这是这四个文件:
+
+![image-20210920172738414](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210920172738414.png)
+
+然后我在优先级4哪里添加以下配置:
+
+```yaml
+student:
+  name: 缪威
+```
+
+然后在pojo进行获取注入:
+
+```java
+@Data
+@Component
+@ConfigurationProperties(prefix = "student")
+public class Person {
+    private String name;
+}
+```
+
+测试运行:
+
+```java
+@SpringBootTest
+class SpringbootProjectApplicationTests {
+    @Autowired
+    private Person person;
+    @Test
+    void contextLoads() {
+        System.out.println(person);
+    }
+
+}
+```
+
+结果:
+
+![image-20210920173007446](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210920173007446.png)
+
+------
+
+当然我们还可以指定外部配置文件,也就是说不需要以上的默认位置去加载:
+
+> 我们还可以通过spring.config.location来改变默认的配置文件位置
+
+项目打包好以后，我们可以使用命令行参数的形式，启动项目的时候来指定配置文件的新位置；这种情况，一般是后期运维做的多，相同配置，外部指定的配置文件优先级最高
+
+```java
+java -jar spring-boot-config.jar --spring.config.location=F:/application.properties
+```
 
 
 
+## 6.JSR303数据校验
+
+这个就是使用`@Validated`来校验数据!如果数据异常则会统一抛出异常,方便异常中心统一处理;
+
+比如:
+
+```java
+@Component //注册bean
+@ConfigurationProperties(prefix = "person")
+@Validated  //数据校验
+public class Person {
+
+    @Email(message="邮箱格式错误") //name必须是邮箱格式
+    private String age;
+}
+```
+
+运行结果:
+
+![image-20210920162655104](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210920162655104.png)
+
+常见的一些参数:
+
+Bean Validation 中内置的 constraint:
+
+![img](https://gitee.com/miawei/pic-go-img/raw/master/imgs/3145530-8ae74d19e6c65b4c)
+
+ Hibernate Validator 附加的 constraint:
+
+![img](https://gitee.com/miawei/pic-go-img/raw/master/imgs/3145530-10035c6af8e90a7c)
 
 
 
+​	踩坑记录:
+
+​	如果在字段添加校验注解比如@Email爆红不存在,那么就去检查一下是否存在对应的包:
+
+![image-20210920162927402](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210920162927402.png)
+
+​	如果没有则引入一下依赖就可以了:
+
+```xml
+<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+</dependency>
+```
 
 
 
+## 7.多环境切换
+
+我们在开发过程中会遇到有多个环境,比如由开发环境,测试环境,每个环境的数据库等配置都是不一样的,那么我们如何进行不同的切换呢?
+
+> 我们在在主配置文件编写的时候,文件名可以是application-{profile}.properties/yml,用来指定多个环境版本
+
+**注**:profile是Spring对不同环境提供不同配置功能的支持,可以通过激活不同的环境版本,实现快速切换环境;
+
+例如:
+
+```yaml
+application-test.properties # 代表测试环境配置
+application-dev.properties # 代表开发环境配置
+```
+
+虽然有多个环境版本,但是springBoot不会直接启动这些配置文件,它默认使用`application.properties`主配置文件;而我们能做的就是通过配置进行选择激活:
+
+```properties
+# 比如在配置文件中指定使用dev环境,我们可以通过设置不同的端口号进行测试;
+# 我们启动springBoot就可以看到已经切换到dev下的配置了
+spring.profiles.active=dev
+```
+
+------
+
+以上的都是用properties文件,每次切换版本啊环境都需要切换不同的配置文件,而yaml可以不需要创建多个配置文件:
+
+```yaml
+server:
+  port: 8081
+#选择要激活那个环境块
+spring:
+  profiles:
+    active: prod
+# 通过---三个中华线进行分割多个环境
+---
+server:
+  port: 8083
+spring:
+  profiles: dev #配置环境的名称
 
 
+---
 
+server:
+  port: 8084
+spring:
+  profiles: prod  #配置环境的名称
+```
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+**注意**:如果yml和properties同时都配置了端口,并且没有激活其他环境,那么默认是会使用properties配置文件的!
