自动装配原理解析

--- a/spring Boot/笔记.md
+++ b/spring Boot/笔记.md
@@ -979,6 +979,121 @@ class SpringbootProjectApplicationTests {
 java -jar spring-boot-config.jar --spring.config.location=F:/application.properties
 ```
 
+### 5.5 配置文件自动配置原理
+
+我们在写yml配置文件的过程中在思考配置文件到底能写什么?怎么写?
+
+在SpringBoot官方的文档中记录了大量的配置,但是我们无法全部记住
+
+![img](https://mmbiz.qpic.cn/mmbiz_png/uJDAUKrGC7IPEXZtUAUBhnSZvUmrPzbD7ibqw837BhN1F7lHdAMhMmYNCYF2tSdvUGv0y3X48tzetuuYc8tUMLg/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+
+接下来开始分析自动配置的原理
+
+1. 我们还是从主启动类的注解进入找到`spring-factories`这个文件,因为自动装配的文件springBoot都存放在这里
+
+   思考?配置文件到底能写什么跟spring-factories这之间的联系!
+
+2. 我们在spring-factories里找到`HttpEncodingAutoConfiguration(Http编码自动配置)`来进行解释自动配置原理:
+
+```java
+//表示这是一个配置类,会被Spring接管、配置->javaConfig形式,跟@Bean搭配使用,跟直接在容器中写<bean>标签是一样的道理
+@Configuration(proxyBeanMethods = false)
+//将配置文件中的对应的值和ServerProperties绑定在一起修改默认值,并把ServerProperties加入到IOC容器中;
+@EnableConfigurationProperties(ServerProperties.class)
+//spring的底层注解:根据不同的条件,来判断当前配置或者类是否生效
+@ConditionalOnWebApplication(type = ConditionalOnWebApplication.Type.SERVLET)  //如果这个类型不是web应用就直接无效
+@ConditionalOnClass(CharacterEncodingFilter.class) //判断当前项目是否存在这个类,SpringMVC中进行乱码解决的过滤器
+@ConditionalOnProperty(prefix = "server.servlet.encoding", value = "enabled", matchIfMissing = true) //判断配置文件中是否存在某个配置,不存在就走默认的
+public class HttpEncodingAutoConfiguration {
+	//他已经和SpringBoot的配置文件映射了
+	private final Encoding properties;
+	//只有一个有参构造器的情况下，参数的值就会从容器中拿
+	public HttpEncodingAutoConfiguration(ServerProperties properties) {
+		this.properties = properties.getServlet().getEncoding();
+	}
+
+	@Bean
+	@ConditionalOnMissingBean
+    //给容器中添加一个组件，这个组件的某些值需要从properties中获取
+	//字符编码的过滤,然后添加到我们组件中
+	public CharacterEncodingFilter characterEncodingFilter() {
+		CharacterEncodingFilter filter = new OrderedCharacterEncodingFilter();
+		filter.setEncoding(this.properties.getCharset().name());
+		filter.setForceRequestEncoding(this.properties.shouldForce(Encoding.Type.REQUEST));
+		filter.setForceResponseEncoding(this.properties.shouldForce(Encoding.Type.RESPONSE));
+		return filter;
+	}
+
+	@Bean
+	//下面这些都是些国际化
+	public LocaleCharsetMappingsCustomizer localeCharsetMappingsCustomizer() {
+		return new LocaleCharsetMappingsCustomizer(this.properties);
+	}
+	...
+
+}
+```
+
+3. 我们点击`ServerProperties.class`这个类里面:
+
+   ![image-20210920194007641](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210920194007641.png)
+
+   可以发现这个`ServlerProperties`绑定了配置文件下的server的所有东西,所以我们说这个配置文件能写什么东西是要去看这个对应的类中有哪些东西!
+
+> 在我们配置文件中能够配置的东西,都存在一个固有的规律:就是以xxxProperties形式的配置类,而这个文件一般由xxxAutoConfiguration装载的,而大量的配置类里面默认装配了一些默认的属性,然后这个自动装配里面一般会去绑定配置了一个文件,就是通过properties的方式加载一些自定义的文件,而这个Properties文件又跟我们配置文件绑定	
+
+**结论**:由xxxAutoConfiguration自动配置类自动帮我们装配东西,而自动装配就会去加载xxxProperties文件里的默认值,而xxxProperties又跟我们配置文件进行绑定,所以我们就可以使用自定义的配置了! 
+
+一句话:根据当前不同的条件判断,决定了这个配置类是否生效!
+
+- 一旦这个配置类生效那么就会给容器中添加各种组件
+- 这些组件的属性是从对应的properties类中获取的,而properties这个类中的每一个属性又是和配置文件进行绑定的;
+- 所有在配置文件中能配置的属性都是在xxxProperties类中封装的;
+- 配置文件能配置什么就可以参照某个功能对应的这个属性类
+
+> 这就是自动装配的原理!
+
+再来记录一波:
+
+1. SpringBoot启动就会加载大量的自动配置类
+2. 我们看我们需要的功能有没有在SpringBoot默认写好的自动配置类当中;
+3. 我们再来看这个自动配置类中到底配置了哪些组件;(只要我们要用的组件存在其中我们就不需要再手动配置了)
+4. 给容器中自动配置类添加组件的时候,会从properties类中获取某些属性,我们只需要在配置文件中指定这些属性的值即可;
+
+```java
+xxxAutoConfiguration:自动配置类,给容器中添加组件
+xxxProperties:封装配置文件中相关属性,通过springBoot配置文件进行动态修改属性值
+```
+
+配置原理理解:
+
+SpringBoot通过主启动类在启动的时候首先会扫描当前主程序下同级类中的注解并添加到容器中,然后开启自动配置容器去找到`META/INF/spring.factories`并加载大量的配置类,这些配置类提供我们大量场景需要的组件,而配置类中判断条件看是否满足生效,而生效就会去往容器中添加组件,而组件的默认值就会去对应加载的properties文件中去获取,而properties又跟springBoot配置文件进行绑定,而我们就可以手动的动态修改默认值,然后将其配置类添加到IOC容器!
+
+### 5.6 @Conditional
+
+在研究自动配置类的时候可以看出基本上每个自动配置类上都会有一个注解就是@Conditional,它表示在一定条件下才能生效
+
+作用:必须是@Conditional指定的条件成立,才给容器中添加组件,配置配里面的所有内容才生效
+
+![image-20210920204453032](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210920204453032.png)
+
+> 那么多的自动配置类,必须在一定的条件下才能生效,也就是说我们加载了这么多的配置类,但不是所有的都生效了
+
+但是这里又有一个思考问题:我们如何知道自己哪些配置类生效了呢?
+
+我们可以通过启用`debug=true`属性;来让控制台打印自动配置报告,这样我们就知道哪些自动配置类生效;
+
+```yaml
+# 开启springBoot的调试类
+debug: true
+```
+
+打印台参数解释:
+
+1. Positive matches:自动配置类启用的:正匹配
+2. Negative matches:,没有启动,没有匹配成功的自动配置类:负匹配
+3. Unconditional classes:没有条件的类
+
 
 
 ## 6.JSR303数据校验
