继续推送一波

--- a/常用技术.md
+++ b/常用技术.md
@@ -144,3 +144,5 @@
 
 ![image-20210920081215557](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210920081215557.png)
 
+## 2.ueditor富文本编辑器
+
