--- a/SSM/SSM整合/整合笔记.md
+++ b/SSM/SSM整合/整合笔记.md
@@ -380,3 +380,40 @@ log4j.logger.org.learn=debug
      ```
 
      要求是4.3以后的版本,之前的好像还不得行!
+
+   3. 我们在前端HTML传参数的时候,前端传值后端接收为对象,这时就会类型出错,那么这个时候如何去处理!
+
+      - 这是错误的:
+
+        前端:
+
+        ```html
+        <select class="form-control" name="department">
+            <option value=1>教学部</option>
+        </select>
+        ```
+
+        后端:
+        
+        ```java
+        @Data
+        @NoArgsConstructor
+        @AllArgsConstructor
+        public class Employee {
+            private Department department;
+        }
+        ```
+        
+        这样子传到后台去只是个名字为department,值为1,而后台接收是要的是一个对象,那么此时好的方案为:
+        
+      - 这是正确的:
+      
+        前端:
+      
+        ```html
+        <select class="form-control" name="department.id">
+            <option value=1>教学部</option>
+        </select>
+        ```
+      
+        后端照常接收,完美!
