--- a/spring Boot/笔记.md
+++ b/spring Boot/笔记.md
@@ -1169,3 +1169,315 @@ public MessageSourceProperties messageSourceProperties() {
 2. 添加国际化`key=value`
 3. 实现`LocaleResolver`接口进行重写
 4. 将重写的类进行添加到Spring容器里去!
+
+## 4.整合JDBC
+
+在整合之前先介绍一下SpringData这个东西,因为对于数据访问层,无论是SQL(关系型数据库)还是NOSQL(非关系型数据库),**SpringBoot底层都是采用Spring Data的方式进行统一处理**.
+
+**SpringData**:是Spring的一个子项目,用于简化数据库访问,支持NoSQL和关系数据库存储,其主要目标是使数据库的访问变得方便快捷;
+
+> SpringBoot底层都是采用Spring Data的方式进行统一处理各种数据库,Spring Data也是Spring中与Spring Boot、Spring Cloud等齐名的知名项目!
+
+**Spring Data 官网**:https://spring.io/projects/spring-data
+
+数据库相关的启动器 ：可以参考官方文档：https://docs.spring.io/spring-boot/docs/2.2.5.RELEASE/reference/htmlsingle/#using-boot-starter
+
+### 4.1 开始使用
+
+1. 首先我们新建项目,然后我们需要在创建SpringBoot项目的时候勾选指定的启动器:
+
+   ![image-20210928145703327](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210928145703327.png)
+
+2. 创建完毕后我们查看pom.xml依赖:
+
+   ```xml-dtd
+   <dependencies>
+           <!--整合JDBC-->
+           <dependency>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-starter-jdbc</artifactId>
+           </dependency>
+           <!--导入web项目所需要的依赖-->
+           <dependency>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-starter-web</artifactId>
+           </dependency>
+           <!--导入MySQL驱动包-->
+           <dependency>
+               <groupId>mysql</groupId>
+               <artifactId>mysql-connector-java</artifactId>
+               <scope>runtime</scope>
+           </dependency>
+           <!--lombok依赖-->
+           <dependency>
+               <groupId>org.projectlombok</groupId>
+               <artifactId>lombok</artifactId>
+               <optional>true</optional>
+           </dependency>
+           <!--测试-->
+           <dependency>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-starter-test</artifactId>
+               <scope>test</scope>
+           </dependency>
+       </dependencies>
+   ```
+
+   可以看出springBoot可以帮我们导入了MySQl的驱动并且也导入JDBC相关的依赖!
+
+3. 驱动都有了我们现在去配置文件中配置数据库的信息
+
+   ```yaml
+   spring:
+     datasource:
+       username: root
+       password: root
+       # userUnicode:保证不乱码  characterEncoding:设置字符集 serverTimezone:设置时区
+       url: jdbc:mysql://localhost:3306/test?userUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+       driver-class-name: com.mysql.cj.jdbc.Driver
+   ```
+
+   **注意**:这里连接数据库的时候要把时区加上,不然就会报以下异常:
+
+   ![image-20210928153247591](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210928153247591.png)
+
+   配置完了我们就可以开始开干了,但是该怎么写呢?
+
+   由于SpringBoot自动装配的特性,我们在导入了JDBC和MySQL驱动的依赖和配置了数据库那么就会自动去产生一些对象;
+
+4. 我们可以看对应的properties文件看看我们能配哪些参数:
+
+   ```java
+   @ConfigurationProperties(prefix = "spring.datasource") //这是前缀
+   public class DataSourceProperties implements BeanClassLoaderAware, InitializingBean {
+       //类加载器
+   	private ClassLoader classLoader;
+   	//是否生成随机数据源名称。
+   	private boolean generateUniqueName = true;
+   	//名称
+   	private String name;
+   	//数据库的类型
+   	private Class<? extends DataSource> type;
+   	//驱动
+   	private String driverClassName;
+   	//数据库连接地址
+   	private String url;
+   	//用户名
+   	private String username;
+   	//密码
+   	private String password;
+   	//数据源的 JNDI 位置。设置时会忽略类、网址、用户名和密码。
+   	private String jndiName;
+   	@Deprecated
+   	private DataSourceInitializationMode initializationMode = DataSourceInitializationMode.EMBEDDED;
+   	//权限
+   	@Deprecated
+   	private String platform = "all";
+   
+   	//在启动的时候会帮你执行一个建库和一些操作的一个脚本
+   	private List<String> schema;
+   	@Deprecated
+   	private String schemaUsername;
+   	@Deprecated
+   	private String schemaPassword;
+   	@Deprecated
+   	private List<String> data;
+   
+   	//账号密码
+   	@Deprecated
+   	private String dataUsername;
+   	@Deprecated
+   	private String dataPassword;
+   	//其他我就不知道了
+   	@Deprecated
+   	private boolean continueOnError = false;
+   	@Deprecated
+   	private String separator = ";";
+   	@Deprecated
+   	private Charset sqlScriptEncoding;
+   	private EmbeddedDatabaseConnection embeddedDatabaseConnection;
+   	private Xa xa = new Xa();
+   	private String uniqueName;
+   ```
+
+5. 我们打开一个测试类进行测试一下:
+
+   ```java
+   package com.example;
+   
+   import org.junit.jupiter.api.Test;
+   import org.springframework.beans.factory.annotation.Autowired;
+   import org.springframework.boot.test.context.SpringBootTest;
+   
+   import javax.sql.DataSource;
+   import java.sql.Connection;
+   import java.sql.SQLException;
+   
+   @SpringBootTest
+   class SpringBootDataApplicationTests {
+       //这里就是自动帮我们创建好的对象,我们注入后就可以直接使用了!
+       @Autowired
+       private DataSource dataSource;
+       
+       @Test
+       void contextLoads() throws SQLException {
+           //class com.zaxxer.hikari.HikariDataSource:这个数据源相较于P3C0,速度是最快的!也可以理解是SpringBoot的内置数据源
+           System.out.println("数据源==>" + dataSource.getClass());
+   
+           Connection connection = dataSource.getConnection();
+           System.out.println("数据库连接==>"+connection);
+           connection.close();
+       }
+   }
+   ```
+
+   控制台:
+
+   ![image-20210928153415058](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210928153415058.png)
+
+   ​	结果:我们可以看到它默认给我们配置的数据源为:`class com.zaxxer.hikari.HikariDataSource`,而这个数据源我们并没有手动配置!而获取的连接信息也可以看出是用JDBC的连接实现!
+
+6. 我们既然看到了配置文件对应的properties,那么我们也去看对应的自动配置类,所以全局搜索`DataSourceAutoConfiguration`来看一下:
+
+   ```java
+   	@Configuration(proxyBeanMethods = false)
+   	@Conditional(PooledDataSourceCondition.class)
+   	@ConditionalOnMissingBean({ DataSource.class, XADataSource.class })
+   	@Import({ DataSourceConfiguration.Hikari.class, DataSourceConfiguration.Tomcat.class,
+   			DataSourceConfiguration.Dbcp2.class, DataSourceConfiguration.OracleUcp.class,
+   			DataSourceConfiguration.Generic.class, DataSourceJmxConfiguration.class })
+   	protected static class PooledDataSourceConfiguration {
+   
+   	}
+   ```
+
+   可以看出这里数据连接池配置方法这里导入了不同的数据源,不过SpringBoot默认的使用的是第一个`HikariDataSource`作为数据源
+
+   > HikariDataSource号称JAVA WEB当前速度最快的数据源,相较于传统的C3P0、DBCP、Tomcatjdbc等连接池更加优秀；
+
+   既然springBoot默认使用那么我们也可以使用`spring.datasource.type`来指定自定义的数据源类型,值为要使用的连接池实现的完全限定名
+
+### 4.2 JDBCTemplate
+
+在SpringBoot里面有很多`xxxTemplate`,这是一个模板,也就是说springBoot给我们写好的Bean,我们可以直接拿来即用!
+
+1. 首先我们得找到对应JDBC所在目录:
+
+   ![image-20210928161410050](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20210928161410050.png)
+
+   2. 然后找到`JdbcTemplateConfiguration`这个类然后点进去:
+
+      ```java
+      @Configuration(proxyBeanMethods = false)
+      //这里做了一个判断,如果这个Bean不存在,那么这个类就不生效
+      @ConditionalOnMissingBean(JdbcOperations.class)
+      class JdbcTemplateConfiguration {
+      
+      	@Bean
+      	@Primary
+          //这里所需参数是数据源和配置就好了,而数据源springBoot已经帮我们做好了,而配置我们也自定义写好了,所以我们可以直接拿来用
+      	JdbcTemplate jdbcTemplate(DataSource dataSource, JdbcProperties properties) {
+      		JdbcTemplate jdbcTemplate = new JdbcTemplate(dataSource);
+      		JdbcProperties.Template template = properties.getTemplate();
+      		jdbcTemplate.setFetchSize(template.getFetchSize());
+      		jdbcTemplate.setMaxRows(template.getMaxRows());
+      		if (template.getQueryTimeout() != null) {
+      			jdbcTemplate.setQueryTimeout((int) template.getQueryTimeout().getSeconds());
+      		}
+      		return jdbcTemplate;
+      	}
+      }
+      ```
+
+   3. 编写Controller我们来测试一下:
+
+      ```java
+      @RestController
+      public class JDBCController {
+          @Autowired
+          private JdbcTemplate jdbcTemplate;
+      
+          @RequestMapping("/query")
+          public List<Map<String,Object>> queryList(){
+              String sql = "select * from user";
+              //查询返回一个list
+              List<Map<String, Object>> query = jdbcTemplate.queryForList(sql);
+              return query;
+          }
+      
+          @RequestMapping("/addUser")
+          public String addUser(){
+              String sql = "insert into user(id,name,pwd) values (2,'小威','2222')";
+              jdbcTemplate.update(sql); //这里可以执行SQL,如果我们使用?占位符,那么我们可以在这里多传一个参数为数组,而我们就对应给数组赋值占位符的数据就可以!
+              return "ok";
+          }
+      }
+      ```
+
+ ### 4.3 总结:
+
+      1. 有了数据源(com.zaxxer.hikari.HikariDataSource)，然后可以拿到数据库连接(java.sql.Connection)，有了连接，就可以使用原生的 JDBC 语句来操作数据库；
+      2. 即使不使用第三方第数据库操作框架，如 MyBatis等，Spring 本身也对原生的JDBC 做了轻量级的封装，即JdbcTemplate。
+      3. 数据库操作的所有 CRUD 方法都在 JdbcTemplate 中。
+      4. Spring Boot 不仅提供了默认的数据源，同时默认已经配置好了 JdbcTemplate 放在了容器中，程序员只需自己注入即可使用
+      5. JdbcTemplate 的自动配置是依赖 org.springframework.boot.autoconfigure.jdbc 包下的 JdbcTemplateConfiguration 类
+
+ JdbcTemplate主要提供以下几类方法：
+
+- execute方法：可以用于执行任何SQL语句，一般用于执行DDL语句；
+- update方法及batchUpdate方法：update方法用于执行新增、修改、删除等语句；batchUpdate方法用于执行批处理相关语句；
+- query方法及queryForXXX方法：用于执行查询相关语句；
+- call方法：用于执行存储过程、函数相关语句。
+
+## 5. 整合Druid
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
